# DesktopShare

./: .gitignore  CMakeLists.txt  README.md
Mediamttx/: mediamtx.yml
ffmpeg7.1/include/libavutil/: ffversion.h
ffmpeg7.1/lib/: libpostproc.so.58.3.100  libswresample.so.5.3.100  libswscale.so.8
src/: Capture.cpp  Capture.h  Encoder.cpp  Encoder.h  FFMpegWrappers.h  ProcessManager.cpp  ProcessManager.h  RtspServerModule.cpp  RtspServerModule.h  Streamer.cpp  Streamer.h  ThreadSafeQueue.h  main.cpp
src/xop/: AACSource.cpp  media.h
